// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Node pass label with HTMLLike ReactElement and render correctly 1`] = `
digraph {
  "aaa" [
    label = <<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0"><TR><TD>left</TD><TD PORT="m">middle</TD><TD PORT="r">right</TD></TR></TABLE>>,
  ];
}
`;

exports[`Node pass label with string and render correctly 1`] = `
digraph {
  "aaa" [
    label = "label test",
  ];
}
`;

exports[`Node pass without optional props and render correctly 1`] = `
digraph {
  "aaa";
}
`;

exports[`Node pass xlabel with HTMLLike ReactElement and render correctly 1`] = `
digraph {
  "aaa" [
    xlabel = <<TABLE BORDER="0" CELLBORDER="1" CELLSPACING="0"><TR><TD>left</TD><TD PORT="m">middle</TD><TD PORT="r">right</TD></TR></TABLE>>,
  ];
}
`;

exports[`Node pass xlabel with string and render correctly 1`] = `
digraph {
  "aaa" [
    xlabel = "xlabel test",
  ];
}
`;
